The background of Node editors appear brighter than they used too #92080

Closed
opened 2021-10-10 07:13:53 +02:00 by Alaska · 9 comments
Member

System Information
Operating system: Linux-5.14.0-1-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-09 19:40, hash: 79425ed326
Worked: Prior to 38c4888f09

Short description of error
In a recent commit 38c4888f09 it appears the background of the node editor has been increased in brightness and this change appears to be a bug with the commit. If it's not a bug, then it's also kind of annoying because it means the background of the node editor is brighter than the colour specified in the user theme.

 New - Node editor.png Old - Node editor.png
New Node editor (lighter) Old Node editor

Both of the images above have the same theme colours.

Exact steps for others to reproduce the error
Open a new version of Blender and a old version of Blender and compare the node editor colours with the same settings.

Or

Observe the difference in colour between the specified colour for the node editor background in the user preferences and the actual colour in the node editor.

**System Information** Operating system: Linux-5.14.0-1-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-09 19:40, hash: `79425ed326` Worked: Prior to 38c4888f09 **Short description of error** In a recent commit 38c4888f09 it appears the background of the node editor has been increased in brightness and this change appears to be a bug with the commit. If it's not a bug, then it's also kind of annoying because it means the background of the node editor is brighter than the colour specified in the user theme. |![ New - Node editor.png](https://archive.blender.org/developer/F10925287/_New_-_Node_editor.png)|![Old - Node editor.png](https://archive.blender.org/developer/F10925276/Old_-_Node_editor.png)| | -- | -- | |New Node editor (lighter)|Old Node editor| Both of the images above have the same theme colours. **Exact steps for others to reproduce the error** Open a new version of Blender and a old version of Blender and compare the node editor colours with the same settings. Or Observe the difference in colour between the specified colour for the node editor background in the user preferences and the actual colour in the node editor.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Member

CC @dfelinto because you worked on this.

CC @dfelinto because you worked on this.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Thanks for making this report!

Thanks for making this report!

This issue was referenced by 813ca82f1e

This issue was referenced by 813ca82f1ec00af6c570be9504f5ffeea56fdfef

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Dalai Felinto self-assigned this 2021-10-11 10:10:29 +02:00

And fixed, thanks for the report @Alaska :)

And fixed, thanks for the report @Alaska :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92080
No description provided.